# erp_parser

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: backend-ci.yml
app/: main.py
app/api/v1/: api.py
app/api/v1/routers/: health.py  parser.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: health.py
app/services/procurement_parser/: __init__.py  cli.py  config.py  data_sources.py  excel_extractor.py  excel_generator.py  models.py  ocr.py  page_analyzer.py  page_classifier.py  pipeline.py  product_extractor.py  table_detector.py  text_utils.py  word_extractor.py
tests/: test_health.py  test_parser_api.py
