[project]
name = "erp-parser"
version = "0.1.0"
description = "ERP Procurement Parser Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"